test/data/pass/statements/switch.js
switch(a) {}
switch(b) { case 0: }
switch(c) { default: }
switch(d) { case 1: default: }
switch(e) { default: case 2: }
switch(f)
{
   case 3: {}
   case 4: g;
   case 5: k; break;
   default: break;
}
